--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  get_it: ^7.6.0
+  intl: ^0.18.1
+  floor: ^1.4.2
+  flutter_hooks: ^0.19.0
+  cached_network_image: ^3.2.3
+  dio: ^5.2.1+1
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -46,13 +54,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: '>=2.3.0 <4.0.0'
+  floor_generator: ^1.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
