--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,8 +13,7 @@ linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
   # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at
-  # https://dart-lang.github.io/linter/lints/index.html.
+  # and their documentation is published at https://dart.dev/lints.
   #
   # Instead of disabling a lint rule for the entire project in the
   # section below, it can also be suppressed for a single line of code
@@ -22,8 +21,30 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    - always_use_package_imports
+    - avoid_dynamic_calls
+    - avoid_empty_else
+    - avoid_print
+    - avoid_relative_lib_imports
+    - avoid_returning_null_for_future
+    - always_declare_return_types
+    - use_key_in_widget_constructors
+    - prefer_final_locals
+    - avoid_redundant_argument_values
+    - prefer_generic_function_type_aliases
+    - directives_ordering
+    - sort_constructors_first
+    - curly_braces_in_flow_control_structures
+    - always_put_control_body_on_new_line
+    - prefer_collection_literals
+    - provide_deprecation_message
+    - prefer_single_quotes
+    - unawaited_futures
+    - avoid_void_async
+    - join_return_with_assignment
+    - avoid_function_literals_in_foreach_calls
+
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
