--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cached_network_image: ^3.2.3
   dio: ^5.2.1+1
   google_fonts: ^5.1.0
+  bloc: ^8.1.2
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +56,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
   build_runner: '>=2.3.0 <4.0.0'
   floor_generator: ^1.4.2
 
