--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   google_fonts: ^5.1.0
   bloc: ^8.1.2
   sqflite: ^2.3.0
+  mockito: ^5.4.2
+  bloc_test: ^9.1.3
 
 dev_dependencies:
   flutter_test:
